objects/FSL__Optimization_Request_Queue__c.object
<CustomObject>
    <description>Merge all requests of the scheduler while using decompose territories</description>
    <label>Optimization Request Queue</label>
    <nameField>
        <displayFormat>ORQ-{0000}</displayFormat>
        <label>Optimization Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optimization Requests Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>FSL__Identifier__c</fullName>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Current_Running_Requests__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current  Running Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Total_Related_Optimization_Requests__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Related Optimization Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>